SteveHorses OLD/Steve PRO OLD/SteveHorsesPro_fix_20250918_003525/logs/run_20250831_021254.log
  File "/Users/stephenjerome/Desktop/SteveHorsesPro/steve_horses_pro.py", line 277
    )
    ^
SyntaxError: f-string expression part cannot include a backslash
